Frontend and devops services deployed with one command.

--- a/roles/enable_nginx/templates/nginx-site.conf.j2
+++ b/roles/enable_nginx/templates/nginx-site.conf.j2
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name tu-dominio-o-ip;  
+    server_name 20.185.56.17;
 
     root /var/www/html;
     index index.html;
